--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
     <!-- FontAwesome Css -->
     <link rel="stylesheet" href="/Content/assets/vendor/fontawesome/font-awesome_6.4.2_css_all.min.css" />
 
+    <!-- Select2 Css -->
+    <link rel="stylesheet" href="/Content/assets/vendor/select2/select2.min.css" />
+
+    <!-- Select2 Bootstrap Theme Css -->
+    <link rel="stylesheet" href="/Content/assets/vendor/select2/select2-bootstrap-5-theme.min.css" />
+
     <!-- Custom Css -->
     <link rel="stylesheet" href="/Content/Site.css" />
 
@@ -706,11 +712,17 @@
             </div>
         </div>
     </div>
+    <div id="my-modal">
+        <div id="loader"></div>
+    </div>
 
     <div class="tab-pane bd-heading-1 fade active show" id="alert-container" role="tabpanel"></div>
 
     <!-- FontAwesome Script -->
     <script src="/Content/assets/vendor/fontawesome/font-awesome_6.4.2_js_all.min.js" defer></script>
+
+    <!-- Select2 Script -->
+    <script src="/Content/assets/vendor/select2/select2.full.min.js" defer></script>
 
     <!-- Library Bundle Script -->
     <script src="/Content/assets/js/core/libs.min.js"></script>
@@ -745,6 +757,67 @@
 
     <!-- Custom Script -->
     <script src="/Scripts/script.js" defer></script>
+
+    <script>
+        $(document).ready(function () {
+            let access_token = getCookie("access_token");
+            //if (access_token != "") {
+            //    $.ajax({
+            //        url: "/login/validate",
+            //        data: access_token,
+            //        processData: false,
+            //        contentType: false,
+            //        type: "POST",
+            //        success: function (result) {
+            //            switch (result.status) {
+            //                case StatusCode.Success:
+            //                    let data = JSON.parse(result.data);
+            //                    console.log(data);
+
+            //                    $("#user-fullname").text(data.name);
+            //                    $("#user-department").text(data.department);
+            //                    break;
+            //                default:
+            //                    setCookie("access_token", "", -1);
+            //                    window.location.pathname = "/login";
+            //                    break;
+            //            }
+            //        }
+            //    })
+            //} else {
+            //    setCookie("access_token", "", -1);
+            //    window.location.pathname = "/login";
+            //}
+
+            let curPath = "/" + window.location.pathname.split("/")[1];
+            $("div.sidebar-list li.nav-item a.nav-link.active:not(.static-item)").removeClass("active");
+            $("div.sidebar-list li.nav-item a.nav-link:not(.static-item)").each(function (index, element) {
+                if ($(element).attr("href").toLowerCase() == curPath.toLowerCase()) $(this).addClass("active");
+            })
+        })
+
+        $("#logout-btn").click(function () {
+            let access_token = getCookie("access_token");
+            $.ajax({
+                url: "/login/logout",
+                data: access_token,
+                processData: false,
+                contentType: false,
+                type: "POST",
+                success: function (result) {
+                    switch (result.status) {
+                        case StatusCode.Success:
+                            setCookie("access_token", "", -1);
+                            window.location.pathname = "/login";
+                            break;
+                        default:
+                            $("#alert-container").append('<div class="mb-3 alert alert-left alert-danger alert-dismissible fade show" role="alert"><span>Logout failed.</br>Please contact Technical Support!</span><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>');
+                            break;
+                    }
+                }
+            })
+        })
+    </script>
 </body>
     @RenderSection("script", false)
 </html>
