--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -342,7 +342,7 @@
                             prog_group.forEach(function (item, index) {
                                 $("#list-project-progress").append('<li><a class="dropdown-item" href="#">' + item.PROJ_NAME + '</a></li>')
                             })
-                            drawProgress(prog_group[0].AVG_PROG, prog_self[0].AVG_PROG);
+                            //drawProgress(prog_group[0].AVG_PROG, prog_self[0].AVG_PROG);
 
                             //drawEvaluation([eval_group[0].AVG_EVAL_HW, eval_group[0].AVG_EVAL_FR, eval_group[0].AVG_EVAL_CR], [eval_self[0].AVG_EVAL_HW, eval_self[0].AVG_EVAL_FR, eval_self[0].AVG_EVAL_CR]);
 
